Fix the race conditions of expanding/collapsing animations. - In widget.html (line 54), rename "scrollable-menu" to "op-scrollable-menu". - In widget.html (line 58), put slug in data-input of .container, this is   planned to be used to select .container's corresponding input field. - In opus.css, rename "scrollable-menu" to "op-scrollable-menu". - In widgets.js (line 139,148), rename "scrollable-menu" to "op-scrollable-menu". - In search.js (line 75-97), add event handlers to collapse shown and hidden   events. These are to avoid the race conditions of expanding/collapsing   animations. - In search.js (line 99-105), use "isTriggeredFromInput" to identify if   the collapse/expand events are triggered by input or mouse click. If it's   triggered by mouse click, we still want to keep the default behavior. If   it's triggered by input, ranges info will show/hide automatically based   on the count of matched characters.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1977,7 +1977,7 @@ ul.ui-autocomplete a.ui-state-active {
 }
 
 /* Enable default scrollbar for ranges info dropdown */
-.op-preprogrammed-ranges .scrollable-menu {
+.op-preprogrammed-ranges .op-scrollable-menu {
     max-height: 200px;
     overflow-y: auto;
     overflow-x: hidden;
@@ -1991,16 +1991,16 @@ ul.ui-autocomplete a.ui-state-active {
 }
 
 /* TEST AREA */
-.op-preprogrammed-ranges .scrollable-menu div {
+.op-preprogrammed-ranges .op-scrollable-menu div {
     /* width: 100%; */
 }
-.op-preprogrammed-ranges .scrollable-menu li {
+.op-preprogrammed-ranges .op-scrollable-menu li {
     /* width: 100%; */
 }
-.op-preprogrammed-ranges .scrollable-menu .row {
+.op-preprogrammed-ranges .op-scrollable-menu .row {
     /* width: 100%; */
 }
-.op-preprogrammed-ranges .scrollable-menu .row div {
+.op-preprogrammed-ranges .op-scrollable-menu .row div {
     /* width: max-content; */
      /* text-align: justify;
      display: inline-block; */
